--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(AliveLibAESrc
     Renderer/OpenGLRenderer.cpp
     Renderer/GLShader.hpp
     Renderer/GLShader.cpp
+    PathDataExtensions.cpp
+    PathDataExtensions.hpp
     Input.cpp
     Input.hpp
     DynamicArray.cpp
