--- a/Source/AliveLibCommon/CMakeLists.txt
+++ b/Source/AliveLibCommon/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(AliveLibCommon VERSION 0.1 LANGUAGES CXX)
 
 SET(AliveLibSrcCommon
+    PathDataExtensionsTypes.hpp
     CompressionType_4Or5.cpp
     CompressionType_4Or5.hpp
     FG1Reader.hpp
