try to fix api + add a smoke test to the build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,7 @@ build_script:
  - if %platform%==x86 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.14 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 15 2017")
  - cmake --build . --config %configuration% -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
  - call "C:\Program Files (x86)\cmake\bin\cpack" -G ZIP -C %configuration%
+ - ctest
 
 install:
  - git submodule update --init --recursive
