AE record/play back with state verification, also keyboard inputs will desync as they don't get recorded

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(AliveLibAESrc
     Renderer/OpenGLRenderer.cpp
     Renderer/GLShader.hpp
     Renderer/GLShader.cpp
+    GameAutoPlayer.hpp
+    GameAutoPlayer.cpp
     PathDataExtensions.cpp
     PathDataExtensions.hpp
     Input.cpp
