add imgui stdlib for std::string helper functions

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -75,6 +75,7 @@ add_library(imgui
 	imgui/imgui_demo.cpp
     imgui/backends/imgui_impl_sdl.cpp
     imgui/backends/imgui_impl_opengl3.cpp
+	imgui/misc/cpp/imgui_stdlib.cpp
     )
 
 target_link_libraries(imgui
