add present to renderer functions + hd asset loading wip

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -431,6 +431,7 @@ endif()
 
 target_link_libraries(AliveLibAE
     AliveLibCommon
+	jsonxx_reliveapi
     EasyLogging++
     googletest
     Cinder
