Change how we apply hd textures, use global table instead
+ add support for emissive textures

--- a/Source/AliveLibCommon/CMakeLists.txt
+++ b/Source/AliveLibCommon/CMakeLists.txt
@@ -35,6 +35,8 @@ SET(AliveLibSrcCommon
     PSXMDECDecoder.h
     Psx_common.hpp
     W32CrashHandler.hpp
+    ExternalAssets.hpp
+    ExternalAssets.cpp
 )
 
 add_library(AliveLibCommon ${AliveLibSrcCommon})
