make grid snapping AO/AE engine funcs common to the API so the editor can call it

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -11,6 +11,8 @@ SET(AliveLibAESrc
     Renderer/OpenGLRenderer.cpp
     Renderer/GLShader.hpp
     Renderer/GLShader.cpp
+    Grid.hpp
+    Grid.cpp
     GameAutoPlayer.hpp
     GameAutoPlayer.cpp
     PathDataExtensions.cpp
