--- a/Source/AliveLibAO/CMakeLists.txt
+++ b/Source/AliveLibAO/CMakeLists.txt
@@ -121,8 +121,8 @@ SET(AliveLibSrcAO
    SecurityDoor.cpp
    BaseBomb.hpp
    BaseBomb.cpp
-   Switch.hpp
-   Switch.cpp
+   Lever.hpp
+   Lever.cpp
    RollingBall.hpp
    RollingBall.cpp
    Leaf.hpp
