abstract file i/o calls in the API

--- a/Source/Tools/relive_api/CMakeLists.txt
+++ b/Source/Tools/relive_api/CMakeLists.txt
@@ -73,6 +73,8 @@ export(TARGETS AliveLibCommon_reliveapi FILE AliveLibCommon_reliveapi.cmake)
 set_property(TARGET AliveLibCommon_reliveapi PROPERTY FOLDER "ReliveAPI")
 
 set(relive_api_src
+    RoundUp.hpp
+    file_api.hpp
     ApiFG1Reader.hpp
     ApiFG1Reader.cpp
     Base64.hpp
