--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,10 +84,9 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/assets)
 
 # -----------------------------------------------------------------------------
 # Setup unity builds
-# Testing if unity builds lead to the "debugging information corrupt; recompile module" error
-set_target_properties(EasyLogging++ PROPERTIES UNITY_BUILD OFF)
-set_target_properties(googletest    PROPERTIES UNITY_BUILD OFF)
-set_target_properties(imgui         PROPERTIES UNITY_BUILD OFF)
+set_target_properties(EasyLogging++ PROPERTIES UNITY_BUILD ON)
+set_target_properties(googletest    PROPERTIES UNITY_BUILD ON)
+set_target_properties(imgui         PROPERTIES UNITY_BUILD ON)
 
 # Disable for now because it breaks alivehook manager by setting unity_XX 
 # to always be the "group"
