--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ endforeach()
 
 if(MSVC)
     add_compile_options(/bigobj)
+    add_compile_options(/permissive)
 endif()
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
