remove fluidsynth and detours from the build

--- a/Source/Tools/vab_tool/CMakeLists.txt
+++ b/Source/Tools/vab_tool/CMakeLists.txt
@@ -23,7 +23,7 @@ if (WIN32)
         PRIVATE cxx_auto_type
         PRIVATE cxx_variadic_templates)
     target_compile_definitions(vab_tool PRIVATE "_CRT_SECURE_NO_WARNINGS")
-    target_link_libraries(vab_tool AliveLibAE AliveLibAO relive_lib libfluidsynth imgui libglew_static)
+    target_link_libraries(vab_tool AliveLibAE AliveLibAO relive_lib imgui libglew_static)
 
     export(TARGETS vab_tool FILE vab_tool.cmake)
     install(TARGETS vab_tool DESTINATION "${BINPATH}")
