Single screen manager, some funky AO FG1 layer remaps

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -23,6 +23,8 @@ SET(relive_lib_src
     Error.hpp
     VRam.hpp
     VRam.cpp
+    ScreenManager.cpp
+    ScreenManager.hpp
     BaseAnimatedWithPhysicsGameObject.hpp
     stdafx.h
 )
