move frame call backs to their own file

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -79,6 +79,8 @@ SET(AliveLibAESrc
     AnimationBase.hpp
     Animation.cpp
     Animation.hpp
+    AnimationCallBacks.cpp
+    AnimationCallBacks.hpp
     AnimationUnknown.cpp
     AnimationUnknown.hpp
     BackgroundAnimation.cpp
