make Layer, AnimationBase and Primitives shared

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -30,6 +30,11 @@ SET(relive_lib_src
     Collisions.hpp
     Collisions.cpp
     BaseAnimatedWithPhysicsGameObject.hpp
+    AnimationBase.cpp
+    AnimationBase.hpp
+    Primitives.hpp
+    Primitives.cpp
+    Layer.hpp
     stdafx.h
 )
 
