rename Sparks -> ZapSparks, remove duplicated relive type

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -360,8 +360,8 @@ SET(AliveLibAESrc
     TouchController.hpp
     ScopedSeq.cpp
     ScopedSeq.hpp
-    Sparks.hpp
-    Sparks.cpp
+    ZapSpark.hpp
+    ZapSpark.cpp
     TestAnimation.cpp
     TestAnimation.hpp
 )
