make AnimationUnknown common

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -36,6 +36,8 @@ SET(relive_lib_src
     Primitives.cpp
     Animation.cpp
     Animation.hpp
+    AnimationUnknown.cpp
+    AnimationUnknown.hpp
     Layer.hpp
     stdafx.h
 )
