--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -1,6 +1,20 @@
 project(relive_lib VERSION 0.1 LANGUAGES CXX)
 
+add_library(lodepng_relivelib
+    ../../3rdParty/lodepng/lodepng.cpp
+    ../../3rdParty/lodepng/lodepng.h
+    )
+target_include_directories(lodepng_relivelib SYSTEM PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty>
+    $<INSTALL_INTERFACE:lodepng>)
+set_property(TARGET lodepng_relivelib PROPERTY FOLDER "3rdParty")
+
+export(TARGETS lodepng_relivelib FILE lodepng_relivelib.cmake)
+
 SET(relive_lib_src
+    # temp hack to use these bits of the api for the data conversion
+    ../Tools/relive_api/CamConverter.cpp
+    ../Tools/relive_api/CamConverter.hpp
     ObjectIds.hpp
     ObjectIds.cpp
     BaseGameObject.hpp
@@ -80,6 +94,7 @@ target_compile_features(relive_lib
     PRIVATE cxx_variadic_templates)
 
 target_link_libraries(relive_lib
+    lodepng_relivelib
     EasyLogging++
     project_warnings
     )
