add map objects per camera, blows up in lines

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -86,6 +86,7 @@ target_include_directories(relive_lib PUBLIC
 target_compile_definitions(relive_lib PRIVATE "_CRT_SECURE_NO_WARNINGS")
 target_compile_definitions(relive_lib PRIVATE "BEHAVIOUR_CHANGE_FORCE_WINDOW_MODE")
 target_compile_definitions(relive_lib PRIVATE "BEHAVIOUR_CHANGE_SUB_DATA_FOLDERS")
+target_compile_definitions(relive_lib PRIVATE "JSON_DISABLE_ENUM_SERIALIZATION=1")
 
 if (MSVC)
     target_compile_options(relive_lib PRIVATE /W4 /wd4996 /WX /MP)
