up to CrawlingSlig.cpp in AE building

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -59,6 +59,8 @@ SET(relive_lib_src
     AnimationUnknown.hpp
     Shadow.hpp
     Shadow.cpp
+    data_conversion/guid.cpp
+    data_conversion/guid.hpp
     data_conversion/camera_converter.hpp
     data_conversion/camera_converter.cpp
     data_conversion/data_conversion.hpp
