make sfx ids common (ae almost builds, ao doomed)

--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -20,6 +20,8 @@ SET(relive_lib_src
     ../Tools/relive_api/ApiFG1Reader.hpp
     BinaryPath.hpp
     BinaryPath.cpp
+    Sfx.hpp
+    Sfx.cpp
     ObjectIds.hpp
     ObjectIds.cpp
     BaseGameObject.hpp
