Fix couple of asan issues, do more bounds check in anim decompression. Hack fix bg anim out of bounds decompression write by doubling the buffer size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ if(MSVC)
     add_compile_options(/permissive)
     add_compile_options(/vmg)
     add_compile_options(/wd4121)
+    #add_compile_options(/fsanitize=address)
 endif()
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
