--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 
-image: Visual Studio 2017
+image: Visual Studio 2022
 
 platform: 
  - x86
@@ -16,10 +16,10 @@ build_script:
  - cd build
  - echo %platform%
  - echo %APPVEYOR_BUILD_NUMBER%
- - if %platform%==x64 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.22 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 15 2017 Win64")
- - if %platform%==x86 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.22 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 15 2017")
+ - if %platform%==x64 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.22 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 17 2022" -A x64)
+ - if %platform%==x86 (cmake .. -DSDL2_DIR=c:\relive\SDL2-2.0.22 -DBUILD_NUMBER=%APPVEYOR_BUILD_NUMBER% -DCI_PROVIDER=AppVeyor -G "Visual Studio 17 2022" -A Win32)
  - cmake --build . --config %configuration% -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
- - call "C:\Program Files (x86)\cmake\bin\cpack" -G ZIP -C %configuration%
+ - call "C:\Program Files\cmake\bin\cpack" -G ZIP -C %configuration%
  - ctest
 
 install:
@@ -29,9 +29,9 @@ install:
 
 after_build:
  - ps: if($env:APPVEYOR_PULL_REQUEST_NUMBER) { $env:PR_STR = "_PR$env:APPVEYOR_PULL_REQUEST_NUMBER" } else {  $env:PR_STR = "" }
- - 7z a RELIVE_Windows_Symbols%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\AliveDllAE.pdb c:\relive\build\Source\AliveDllAO\%CONFIGURATION%\AliveDllAO.pdb c:\relive\build\Source\relive\%CONFIGURATION%\relive.pdb
+ - 7z a RELIVE_Windows_Symbols%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip c:\relive\build\Source\relive\%CONFIGURATION%\relive.pdb
  - rename relive-*.zip RELIVE_Windows_Binaries_Full%PR_STR%_%CONFIGURATION%_%PLATFORM%_%APPVEYOR_BUILD_NUMBER%.zip
- - 7z a RELIVE_Windows_Binaries_Lite%PR_STR%_%CONFIGURATION%_%PLATFORM%.zip c:\relive\build\Source\relive\%CONFIGURATION%\relive.exe c:\relive\build\Source\AliveDllAE\%CONFIGURATION%\SDL2.dll
+ - 7z a RELIVE_Windows_Binaries_Lite%PR_STR%_%CONFIGURATION%_%PLATFORM%.zip c:\relive\build\Source\relive\%CONFIGURATION%\relive.exe c:\relive\build\Source\relive\%CONFIGURATION%\SDL2.dll
 
 artifacts:
  - path: build\RELIVE_Windows_Symbols*.zip
