--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -7,10 +7,10 @@ SET(AliveLibAESrc
     Renderer/SoftwareRenderer.cpp
     Renderer/DirectX9Renderer.hpp
     Renderer/DirectX9Renderer.cpp
-    Renderer/OpenGLRenderer.hpp
-    Renderer/OpenGLRenderer.cpp
-    Renderer/GLShader.hpp
-    Renderer/GLShader.cpp
+    Renderer/OpenGL3/OpenGLRenderer.hpp
+    Renderer/OpenGL3/OpenGLRenderer.cpp
+    Renderer/OpenGL3/GLShader.hpp
+    Renderer/OpenGL3/GLShader.cpp
     Grid.hpp
     Grid.cpp
     GameAutoPlayer.hpp
