--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -7,6 +7,8 @@ SET(AliveLibAESrc
     Renderer/SoftwareRenderer.cpp
     Renderer/DirectX9Renderer.hpp
     Renderer/DirectX9Renderer.cpp
+    Renderer/OpenGL3/GLDebug.hpp
+    Renderer/OpenGL3/GLDebug.cpp
     Renderer/OpenGL3/OpenGLRenderer.hpp
     Renderer/OpenGL3/OpenGLRenderer.cpp
     Renderer/OpenGL3/GLShader.hpp
